--- a/setup.cfg
+++ b/setup.cfg
@@ -21,13 +21,18 @@ classifiers =
 [options]
 packages = find:
 install_requires =
+    nbformat
 python_requires = >=3.6.1
+
+[options.extras_require]
+develop =
+    pytest
+    pytest-cov
 
 [options.packages.find]
 exclude =
     tests*
-    testing*
 
 [options.entry_points]
 console_scripts =
-    nb-check-cells-sequential = nb-check-cells-sequential:main
+    nb_check_cells_sequential = nb_check_cells_sequential:main
