--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
--   id: nb-check-cells-sequential
+-   id: nbcheckorder
     name: Check if notebook cells are sequential
     description: Prevents messy notebooks from being committed.
-    entry: nb-check-cells-sequential
+    entry: nbcheckorder
     language: python
     types: [jupyter]
