--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = nb-check-cells-sequential
-version = 0.0.1
+name = nbcheckorder
+version = 0.1.0
 description = Check if notebook cells are sequential
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/stefsmeets/nb-check-cells-sequential
+url = https://github.com/stefsmeets/nbcheckorder
 author = Stef Smeets
 author_email = s.smeets@esciencecenter.nl
 license = MIT
-license_file = LICENSE
+license_file = LICENCE
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3.6
@@ -35,4 +35,4 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-    nb_check_cells_sequential = nb_check_cells_sequential:main
+    nbcheckorder = nbcheckorder:main
