--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nbcheckorder
-version = 0.2.0
+version = 0.3.0
 description = Check if notebook cells are sequential
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -16,6 +16,8 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Programming Language :: Python :: Implementation :: CPython
 
 [options]
